# timeseries-llm

./: .gitignore  infer.sh  main.py  pyproject.toml  train.sh
.playwright-mcp/: page-2026-05-12T02-00-01-544Z.yml  page-2026-05-12T02-00-26-977Z.yml  page-2026-05-12T02-00-33-371Z.yml  page-2026-05-12T02-00-40-719Z.yml  page-2026-05-12T02-00-46-536Z.yml  page-2026-05-12T02-00-51-228Z.yml
configs/: default.yaml
docs/superpowers/plans/: 2026-05-09-timeseries-llm-implementation-plan.md
docs/superpowers/specs/: 2026-05-09-timeseries-llm-alignment-design.md
scripts/: show_dataset.py
src/timeseries_llm/: __init__.py
src/timeseries_llm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/timeseries_llm/data/: __init__.py  generator.py
src/timeseries_llm/inference/: __init__.py  pipeline.py
src/timeseries_llm/models/: __init__.py  encoder.py  fusion.py  llm_wrapper.py  lossless_encoder.py  timeseries_encoder.py
src/timeseries_llm/training/: __init__.py  trainer.py
tests/: test_encoder.py  test_fusion.py  test_generator.py  test_llm_wrapper.py  test_pipeline.py  test_trainer.py
