[project]
name = "timeseries-llm"
version = "0.1.0"
description = "TimeSeries-LLM alignment for precise numerical understanding"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "einops>=0.7.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "modelscope>=1.20.0",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "black>=24.0.0", "ruff>=0.3.0"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.setuptools.packages.find]
where = ["src"]
